# thrift_conn

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp
message_file/: message.thrift
messages/: MessageService.cpp  MessageService.h  message_constants.cpp  message_constants.h  message_types.cpp  message_types.h
server/: CMakeLists.txt  Server.cpp
